# potamides

./: .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conftest.py  noxfile.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  draft-pdf.yml  ossar.yml
docs/: conf.py  index.md
docs/api/: accelerations.md  core.md  custom_types.md  index.md  likelihood.md  plot.md  splinelib.md
docs/guides/: 1D-inference.md  2D-inference.md  begin.md  stream_fitting.md
docs/static/: generate_jaxtyping_inv.py  jaxtyping.inv
paper/: codemeta.json  paper.bib  paper.md
src/potamides/: splinelib.py
src/potamides/_src/: accelerations.py  core.py  likelihood.py  plot.py
src/potamides/_src/splinelib/: __init__.py  compat.py  data.py  funcs.py  opt.py
tests/: test_package.py
tests/data/: test_arc_length_quadrature_consistency.txt  test_point_to_point_arclength_complex_consistency.txt
tests/splinelib/: test_data.py  test_funcs.py
